// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token streams are stable fixtures body-work token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "bw1-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "1@2",
          "2b@3",
        ],
      },
      {
        "id": "bw1-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "bw1-b3",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "1@1.3333333333333333",
          "2b@2",
        ],
      },
      {
        "id": "bw1-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1b@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 260,
    "theme": "Downstairs",
  },
  {
    "blocks": [
      {
        "id": "bw2-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2b@0",
          "3b@1",
          "2b@2",
          "rest@3",
        ],
      },
      {
        "id": "bw2-b2",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3b@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "bw2-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@0.5",
          "1b@1",
          "2b@1.5",
        ],
      },
      {
        "id": "bw2-b4",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "rest@3",
        ],
      },
    ],
    "target": 245,
    "theme": "Dig to the body",
  },
  {
    "blocks": [
      {
        "id": "bw3-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "1@2",
          "2b@3",
          "3@4",
          "2b@5",
          "3@6",
          "rest@7",
        ],
      },
      {
        "id": "bw3-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3b@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "bw3-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "1@1.3333333333333333",
          "2b@2",
        ],
      },
      {
        "id": "bw3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2b@0",
          "2b@0.5",
          "2b@1",
          "2b@1.5",
        ],
      },
    ],
    "target": 275,
    "theme": "Mixing floors",
  },
  {
    "blocks": [
      {
        "id": "bw4-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "2b@3",
        ],
      },
      {
        "id": "bw4-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "bw4-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@1",
          "3b@2",
          "rest@3",
        ],
      },
      {
        "id": "bw4-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.5",
          "1@1",
          "2b@1.5",
        ],
      },
    ],
    "target": 230,
    "theme": "Body finish",
  },
]
`;

exports[`token streams are stable fixtures establish-the-jab-20 token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "jab1-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "jab1-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "jab1-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "jab1-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
      {
        "id": "jab1-b5",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 290,
    "theme": "The jab is home",
  },
  {
    "blocks": [
      {
        "id": "jab2-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "jab2-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "jab2-b3",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "jab2-b4",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 285,
    "theme": "Doubling up",
  },
  {
    "blocks": [
      {
        "id": "jab3-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
          "1@4",
          "1@5",
          "2@6",
          "rest@7",
        ],
      },
      {
        "id": "jab3-b2",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "jab3-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "jab3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 290,
    "theme": "Jab into the cross",
  },
  {
    "blocks": [
      {
        "id": "jab4-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "jab4-b2",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "jab4-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 300,
    "theme": "Own the range",
  },
]
`;

exports[`token streams are stable fixtures heavy-hands token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "hh1-b1",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "hh1-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "hh1-b3",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "hh1-b4",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "hh1-b5",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
    ],
    "target": 460,
    "theme": "Sit down on the cross",
  },
  {
    "blocks": [
      {
        "id": "hh2-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "3@4",
          "2@5",
          "3@6",
          "2@7",
        ],
      },
      {
        "id": "hh2-b2",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "hh2-b3",
        "kind": "repeated-combo",
        "repeat": 35,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "hh2-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "hh2-b5",
        "kind": "repeated-combo",
        "repeat": 35,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 560,
    "theme": "Hooks off the cross",
  },
  {
    "blocks": [
      {
        "id": "hh3-b1",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "hh3-b2",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@0.5",
          "3@1",
          "2@1.5",
        ],
      },
      {
        "id": "hh3-b3",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "hh3-b4",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 450,
    "theme": "Double up",
  },
  {
    "blocks": [
      {
        "id": "hh4-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "3@3",
          "2@4",
          "3@5",
          "2@6",
          "rest@7",
        ],
      },
      {
        "id": "hh4-b2",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "hh4-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "hh4-b4",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 500,
    "theme": "Heavy finish",
  },
]
`;

exports[`token streams are stable fixtures pace-pusher token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "pp1-b1",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "pp1-b2",
        "kind": "repeated-combo",
        "repeat": 60,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pp1-b3",
        "kind": "repeated-combo",
        "repeat": 60,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
    ],
    "target": 600,
    "theme": "The ladder",
  },
  {
    "blocks": [
      {
        "id": "pp2-b1",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pp2-b2",
        "kind": "repeated-combo",
        "repeat": 50,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "pp2-b3",
        "kind": "repeated-combo",
        "repeat": 50,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "pp2-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
    ],
    "target": 435,
    "theme": "Ladder the jab",
  },
  {
    "blocks": [
      {
        "id": "pp3-b1",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pp3-b2",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "pp3-b3",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "3@1.5",
        ],
      },
      {
        "id": "pp3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
    ],
    "target": 490,
    "theme": "Ladder the hook",
  },
  {
    "blocks": [
      {
        "id": "pp4-b1",
        "kind": "repeated-combo",
        "repeat": 12,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "3@4",
          "2@5",
          "3@6",
          "2@7",
        ],
      },
      {
        "id": "pp4-b2",
        "kind": "repeated-combo",
        "repeat": 36,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pp4-b3",
        "kind": "repeated-combo",
        "repeat": 36,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "2@1.5",
        ],
      },
      {
        "id": "pp4-b4",
        "kind": "repeated-combo",
        "repeat": 36,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pp4-b5",
        "kind": "repeated-combo",
        "repeat": 36,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
    ],
    "target": 672,
    "theme": "All rates at once",
  },
]
`;

exports[`token streams are stable fixtures progressive-buildup token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "pb1-b1",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "pb1-b2",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
      {
        "id": "pb1-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
    ],
    "target": 300,
    "theme": "One",
  },
  {
    "blocks": [
      {
        "id": "pb2-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "pb2-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pb2-b3",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 230,
    "theme": "One-two",
  },
  {
    "blocks": [
      {
        "id": "pb3-b1",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "pb3-b2",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pb3-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 255,
    "theme": "One-two-three",
  },
  {
    "blocks": [
      {
        "id": "pb4-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1@4",
          "2@5",
          "3@6",
          "rest@7",
        ],
      },
      {
        "id": "pb4-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "pb4-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "2@1.5",
          "1@2",
          "2@2.5",
          "3@3",
          "rest@3.5",
        ],
      },
    ],
    "target": 290,
    "theme": "The whole phrase",
  },
]
`;

exports[`token streams are stable fixtures pump-and-coast token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "pc1-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "pc1-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc1-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "2@0.5",
          "2@1",
          "2@1.5",
        ],
      },
      {
        "id": "pc1-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pc1-b5",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 200,
    "theme": "Pump, then breathe",
  },
  {
    "blocks": [
      {
        "id": "pc2-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "pc2-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc2-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "2@1",
          "2@2",
          "2@3",
        ],
      },
      {
        "id": "pc2-b4",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc2-b5",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 180,
    "theme": "Coast is a choice",
  },
  {
    "blocks": [
      {
        "id": "pc3-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
          "2@4",
          "2@5",
          "2@6",
          "2@7",
        ],
      },
      {
        "id": "pc3-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pc3-b3",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "pc3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 260,
    "theme": "Two-page pump",
  },
  {
    "blocks": [
      {
        "id": "pc4-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "pc4-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc4-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "pc4-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 250,
    "theme": "Big pump home",
  },
]
`;

exports[`token streams are stable fixtures speed-combos token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "sp1-b1",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "sp1-b2",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp1-b3",
        "kind": "repeated-combo",
        "repeat": 60,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "sp1-b4",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sp1-b5",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
    ],
    "target": 680,
    "theme": "Fast hands",
  },
  {
    "blocks": [
      {
        "id": "sp2-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
          "1@4",
          "1@5",
          "2@6",
          "rest@7",
        ],
      },
      {
        "id": "sp2-b2",
        "kind": "repeated-combo",
        "repeat": 80,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "sp2-b3",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
      {
        "id": "sp2-b4",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "1@1",
          "2@2",
          "1@3",
        ],
      },
    ],
    "target": 740,
    "theme": "Doubles at pace",
  },
  {
    "blocks": [
      {
        "id": "sp3-b1",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "sp3-b2",
        "kind": "repeated-combo",
        "repeat": 40,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "sp3-b3",
        "kind": "repeated-combo",
        "repeat": 60,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
          "2@2",
          "3@2.5",
          "2@3",
          "rest@3.5",
        ],
      },
      {
        "id": "sp3-b5",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 730,
    "theme": "Pages at speed",
  },
  {
    "blocks": [
      {
        "id": "sp4-b1",
        "kind": "repeated-combo",
        "repeat": 50,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "sp4-b2",
        "kind": "repeated-combo",
        "repeat": 50,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp4-b3",
        "kind": "repeated-combo",
        "repeat": 35,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "sp4-b4",
        "kind": "repeated-combo",
        "repeat": 70,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 700,
    "theme": "Empty the tank",
  },
]
`;

exports[`token streams are stable fixtures switch-by-round token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "sw1-b1",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "sw1-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "sw1-b3",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "sw1-b4",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 209,
    "theme": "Orthodox base",
  },
  {
    "blocks": [
      {
        "id": "sw2-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "sw2-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "sw2-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "sw2-b4",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "1@0.5",
          "2@1",
          "1@1.5",
        ],
      },
    ],
    "target": 234,
    "theme": "Southpaw mirror",
  },
  {
    "blocks": [
      {
        "id": "sw3-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
          "2@4",
          "3@5",
          "2@6",
          "rest@7",
        ],
      },
      {
        "id": "sw3-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "sw3-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "sw3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 225,
    "theme": "Orthodox pressure",
  },
  {
    "blocks": [
      {
        "id": "sw4-b1",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "sw4-b2",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "sw4-b3",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "sw4-b4",
        "kind": "repeated-combo",
        "repeat": 21,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 223,
    "theme": "Southpaw finish",
  },
]
`;

exports[`token streams are stable fixtures three-round-fundamentals token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "trf1-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "trf1-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "trf1-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "trf1-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
        ],
      },
      {
        "id": "trf1-b5",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "trf1-b6",
        "kind": "repeated-combo",
        "repeat": 5,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "trf1-b7",
        "kind": "repeated-combo",
        "repeat": 5,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 290,
    "theme": "Find the rhythm",
  },
  {
    "blocks": [
      {
        "id": "trf2-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
          "3@4",
          "2@5",
          "3@6",
          "2@7",
        ],
      },
      {
        "id": "trf2-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "trf2-b3",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "trf2-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "trf2-b5",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "trf2-b6",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 325,
    "theme": "Stack the pages",
  },
  {
    "blocks": [
      {
        "id": "trf3-b1",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "trf3-b2",
        "kind": "repeated-combo",
        "repeat": 11,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "trf3-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "1@1",
          "1@1.5",
        ],
      },
      {
        "id": "trf3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "trf3-b5",
        "kind": "repeated-combo",
        "repeat": 6,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "3@3",
          "2@4",
          "3@5",
          "2@6",
          "rest@7",
        ],
      },
    ],
    "target": 306,
    "theme": "Put it together",
  },
]
`;

exports[`token streams are stable fixtures uppercut-clinic token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "uc1-b1",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "uc1-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@1",
          "1@2",
          "6@3",
        ],
      },
      {
        "id": "uc1-b3",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "6@0",
          "5@0.6666666666666666",
          "6@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "uc1-b4",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@0.5",
          "5@1",
          "2@1.5",
        ],
      },
    ],
    "target": 220,
    "theme": "Up the middle",
  },
  {
    "blocks": [
      {
        "id": "uc2-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "uc2-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "6@0.6666666666666666",
          "5@1.3333333333333333",
          "6@2",
        ],
      },
      {
        "id": "uc2-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "5@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "uc2-b4",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@0.5",
          "1@1",
          "6@1.5",
        ],
      },
    ],
    "target": 234,
    "theme": "Uppercut off the jab",
  },
  {
    "blocks": [
      {
        "id": "uc3-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@1",
          "5@2",
          "2@3",
          "6@4",
          "5@5",
          "6@6",
          "rest@7",
        ],
      },
      {
        "id": "uc3-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "6@0.5",
          "5@1",
          "6@1.5",
        ],
      },
      {
        "id": "uc3-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "uc3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "6@0",
          "5@0.6666666666666666",
          "6@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 235,
    "theme": "Pairs and pages",
  },
  {
    "blocks": [
      {
        "id": "uc4-b1",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "6@1",
          "5@2",
          "6@3",
        ],
      },
      {
        "id": "uc4-b2",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "5@1.3333333333333333",
          "6@2",
        ],
      },
      {
        "id": "uc4-b3",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "6@0",
          "5@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "uc4-b4",
        "kind": "repeated-combo",
        "repeat": 21,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@0.5",
          "5@1",
          "2@1.5",
        ],
      },
    ],
    "target": 236,
    "theme": "Clinic finish",
  },
]
`;
